Fix a few alignment issues

--- a/style.css
+++ b/style.css
@@ -54,8 +54,6 @@ a {
 
 li {
     line-height: 1rem;
-    padding-left: 1em;
-    text-indent: -1em;
     vertical-align: middle;
 }
 
